test/sema/function_returning_function_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): number {
  return 0;
}

fn bar(): (number) -> number {
  // CHECK: [[# @LINE + 1 ]]:10: error: cannot return '() -> number' from a function returning '(number) -> number'
  return foo;
}

fn main(): unit { 
  // CHECK: [[# @LINE + 1 ]]:26: error: an expression of type '(number) -> number' cannot be used to initialize a variable of type '() -> unit'
  let f: () -> unit = bar();
}

// CHECK-NOT: {{.*error.*}}
